test-cases/negative/complex_002_incomplete_for_loop.lay
# negative test case: incomplete for loop
# expected error: Missing 'do' clause in for each loop
# description: Tests that for loops must have complete structure

for each item in list


